examples/test/testpolicy10319.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10319
  namespace: namespace268
spec:
  podSelector:
    matchLabels:
      key48: value23
      key8: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value23
          key4: value45
          key39: value6
      podSelector:
        matchLabels:
          key42: value23
          key22: value46
